--- a/exclude/comments.html
+++ b/exclude/comments.html
@@ -22,6 +22,6 @@
       <!-- End static comments -->
     {% endif %}
 
-    {% include comment-form.html %}
+    <!-- {% include comment-form.html %} -->
   {% endif %}
 </div>
